--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -63,7 +63,7 @@ under the License.
       </span>
     </a>
     <div class="toc-wrapper">
-      <%= image_tag "logo.png", class: 'logo' %>
+      <%= image_tag "https://sirv.sirv.com/website/img/sirv-logo-823-white.png", class: 'logo' %>
       <% if language_tabs.any? %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
