--- a/source/stylesheets/_centerCodeFix.scss
+++ b/source/stylesheets/_centerCodeFix.scss
@@ -3,7 +3,17 @@
     position: static;
     float: none;
     clear: none;
-    margin: 0 28px;
+    margin: 0 0px;
     left: 0;
   }
+}
+
+.center-column {
+    float: left !important;
+    background-color: #f0f0f0 !important;
+    color: black !important;
+    clear: none !important;
+    // margin-right: $examples-width !important;
+    // width: 50% !important;     // May need to adjust this
+    // text-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
 }
