--- a/source/stylesheets/_centerCodeFix.scss
+++ b/source/stylesheets/_centerCodeFix.scss
@@ -1,11 +1,15 @@
 .content {
-  .center-column + div > pre {
-    position: static;
-    float: none;
-    clear: none;
-    margin: 0 0px;
-    left: 0;
-  }
+    .center-column + div  {
+        background-color: 333;
+    }
+
+    .center-column + div > pre {
+        position: static;
+        float: none;
+        clear: none;
+        margin: 0 0px;
+        left: 0;
+    }
 }
 
 .center-column {
