--- a/source/stylesheets/_centerCodeFix.scss
+++ b/source/stylesheets/_centerCodeFix.scss
@@ -1,6 +1,6 @@
 .content {
     .center-column + div  {
-        background-color: 333;
+        background-color: #333;
     }
 
     .center-column + div > pre {
