--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -14,10 +14,6 @@ toc_footers:
   - <a href='#'>Sign Up for a Developer Key</a>
   - <a href='https://github.com/slatedocs/slate'>Documentation Powered by Slate</a>
 
-includes:
-  - api/account
-  - errors
-
 search: true
 
 code_clipboard: true
@@ -71,3 +67,4 @@ Kittn expects for the API key to be included in all API requests to the server i
 You must replace <code>meowmeowmeow</code> with your personal API key.
 </aside>
 
+<%= partial "includes/api/account.md.erb" %>
