--- a/source/includes/api/account.md.erb
+++ b/source/includes/api/account.md.erb
@@ -3,3 +3,4 @@
 <%= partial "includes/api/account/getAccount.md.erb" %>
 <%= partial "includes/api/account/postAccount.md.erb" %>
 <%= partial "includes/api/account/getAccountStorage.md.erb" %>
+<%= partial "includes/api/account/getAccountUsers.md.erb" %>
