--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -68,3 +68,4 @@ You must replace <code>meowmeowmeow</code> with your personal API key.
 </aside>
 
 <%= partial "includes/api/account.md.erb" %>
+<%= partial "includes/api/stats.md.erb" %>
