--- a/source/includes/api/stats/_getStatsStorage.md.erb
+++ b/source/includes/api/stats/_getStatsStorage.md.erb
@@ -112,8 +112,8 @@ Use this API method to check the total amount of data stored on a given day or e
 
 Parameter | Default | Description
 --------- | ------- | -----------
-from | 1 month ago | Start date
-to | now | End date
+from | 1 month ago | Start date (ISO Date format)
+to | now | End date (ISO Date format)
 
 
 ### Response:
