--- a/source/includes/api/stats/_getStatsStorage.md.erb
+++ b/source/includes/api/stats/_getStatsStorage.md.erb
@@ -39,8 +39,8 @@ print(response.text)
 ```
 
 ```shell
-curl --request GET \
-  --url 'https://api.sirv.com/v2/stats/storage?from=2020-07-01T00%3A00%3A00.000&to=2020-07-03T00%3A00%3A00.000' \
+curl --request GET \\
+  --url 'https://api.sirv.com/v2/stats/storage?from=2020-07-01T00%3A00%3A00.000&to=2020-07-03T00%3A00%3A00.000' \\
   --header 'authorization: Bearer BEARER_TOKEN'
 ```
 
