--- a/source/includes/api/account.md.erb
+++ b/source/includes/api/account.md.erb
@@ -1,6 +1,6 @@
 # Account API
 
-<%= partial "includes/api/account/getAccount.md.erb" %>
-<%= partial "includes/api/account/postAccount.md.erb" %>
-<%= partial "includes/api/account/getAccountStorage.md.erb" %>
-<%= partial "includes/api/account/getAccountUsers.md.erb" %>
+<%= partial "includes/api/account/getAccount.md" %>
+<%= partial "includes/api/account/postAccount.md" %>
+<%= partial "includes/api/account/getAccountStorage.md" %>
+<%= partial "includes/api/account/getAccountUsers.md" %>
