--- a/source/includes/api/stats.md.erb
+++ b/source/includes/api/stats.md.erb
@@ -1,3 +1,3 @@
 # Statistics API
 
-<%= partial "includes/api/stats/getStatsStorage.md.erb" %>
+<%= partial "includes/api/stats/getStatsStorage.md" %>
