--- a/source/includes/api/stats.md.erb
+++ b/source/includes/api/stats.md.erb
@@ -1,3 +1,5 @@
 # Statistics API
 
+<%= partial "includes/api/stats/getStatsHttp.md" %>
+<%= partial "includes/api/stats/getStatsSpinViews.md" %>
 <%= partial "includes/api/stats/getStatsStorage.md" %>
