--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -3,12 +3,11 @@ title: Sirv API Reference
 
 language_tabs: # must be one of https://git.io/vQNgJ
   - shell: shell (cURL)
-  - python: Python (Requests)
+  - python: Python 3 HTTP Client
   - javascript--node: Node.js
   - javascript: JavaScript
   - java: Java (Unirest)
-  - php: PHP (HTTP v2)
-  - http: HTTP
+  - php: PHP (cURL)
 
 toc_footers:
   - <a href='#'>Sign Up for a Developer Key</a>
@@ -68,4 +67,6 @@ You must replace <code>meowmeowmeow</code> with your personal API key.
 </aside>
 
 <%= partial "includes/api/account.md.erb" %>
+<%= partial "includes/api/user.md.erb" %>
 <%= partial "includes/api/stats.md.erb" %>
+<%= partial "includes/api/files.md.erb" %>
