--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -2,6 +2,7 @@
 
 <%= partial "includes/api/methods/getFilesMetaApproval.md" %>
 <%= partial "includes/api/methods/getFilesMetaDescription.md" %>
+<%= partial "includes/api/methods/getFilesMetaProduct.md" %>
 <%= partial "includes/api/methods/getFilesMetaTags.md" %>
 <%= partial "includes/api/methods/getFilesMetaTitle.md" %>
 <%= partial "includes/api/methods/getFilesOptions.md" %>
