--- a/source/includes/api/account.md.erb
+++ b/source/includes/api/account.md.erb
@@ -8,3 +8,4 @@
 <%= partial "includes/api/methods/getBillingPlan.md" %>
 
 <%= partial "includes/api/methods/postAccount.md" %>
+<%= partial "includes/api/methods/postAccountEventsSearch.md" %>
