--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -3,11 +3,15 @@ title: Sirv API Reference
 
 language_tabs: # must be one of https://git.io/vQNgJ
   - shell: shell (cURL)
-  - python: Python 3 HTTP Client
+  - python: Python
   - javascript--node: Node.js
   - javascript: JavaScript
   - java: Java (Unirest)
   - php: PHP (cURL)
+  - ruby: Ruby
+  - swift: Swift
+  - go: Go
+  - csharp: C# (RestSharp)
 
 toc_footers:
   - <a href='#'>Sign Up for a Developer Key</a>
