--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -2,16 +2,16 @@
 title: Sirv API Reference
 
 language_tabs: # must be one of https://git.io/vQNgJ
-  - shell: shell (cURL)
+  - shell: cURL
   - python: Python
   - javascript--node: Node.js
   - javascript: JavaScript
-  - java: Java (Unirest)
-  - php: PHP (cURL)
+  - java: Java
+  - php: PHP
   - ruby: Ruby
   - swift: Swift
   - go: Go
-  - csharp: C# (RestSharp)
+  - csharp: C#
 
 toc_footers:
   - <a href='#'>Sign Up for a Developer Key</a>
