--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -22,53 +22,25 @@ search: true
 code_clipboard: true
 ---
 
-# Introduction
+# Getting started
 
-Welcome to the Kittn API! You can use our API to access Kittn API endpoints, which can get information on various cats, kittens, and breeds in our database.
+The first time you use the Sirv REST API, create an API client, then connect to Sirv. Once connected, you can use over 30 API methods.
 
-We have language bindings in Shell, Ruby, Python, and JavaScript! You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.
+# API client
 
-This example API documentation page was created with [Slate](https://github.com/slatedocs/slate). Feel free to edit it and use it as a base for your own API's documentation.
+To use the Sirv REST API, create an API client from the [Settings page of your Sirv account](https://my.sirv.com/#/account/settings):
 
-# Authentication
+![Create API Client](https://sirv.sirv.com/website/screenshots/sirv-api-client-create.png?profile=screenshots-grey-border)
 
-> To authorize, use this code:
+Once created, you'll see your Client ID and Client Secret:
 
-```ruby
-require 'kittn'
+![API Client Credentials](https://sirv.sirv.com/website/screenshots/sirv-api-client-list.png?profile=screenshots-grey-border)
 
-api = Kittn::APIClient.authorize!('meowmeowmeow')
-```
+# Connect to Sirv API
 
-```python
-import kittn
+Each API call must be authenticated with a bearer token (JSON Web Token). You can get a token with a POST request. Use the token with the Sirv REST API methods listed below. When the token expires (see the expiresIn field, in seconds), you should request a new token.
 
-api = kittn.authorize('meowmeowmeow')
-```
-
-```shell
-# With shell, you can just pass the correct header with each request
-curl "https://api.sirv.com/v2/"
-  -H "Authorization: Bearer:meowmeowmeow"
-```
-
-```javascript
-const kittn = require('kittn');
-
-let api = kittn.authorize('meowmeowmeow');
-```
-
-> Make sure to replace `meowmeowmeow` with your API key.
-
-Kittn uses API keys to allow access to the API. You can register a new Kittn API key at our [developer portal](http://example.com/developers).
-
-Kittn expects for the API key to be included in all API requests to the server in a header that looks like the following:
-
-`Authorization: meowmeowmeow`
-
-<aside class="notice">
-You must replace <code>meowmeowmeow</code> with your personal API key.
-</aside>
+<%= partial "includes/api/methods/postToken.md" %>
 
 <%= partial "includes/api/account.md.erb" %>
 <%= partial "includes/api/user.md.erb" %>
