--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -14,8 +14,7 @@ language_tabs: # must be one of https://git.io/vQNgJ
   - csharp: C#
 
 toc_footers:
-  - <a href='#'>Sign Up for a Developer Key</a>
-  - <a href='https://github.com/slatedocs/slate'>Documentation Powered by Slate</a>
+  - <a href='https://sirv.com/contact/'>Need Help?</a>
 
 search: true
 
