Add API method to mark event as seen

--- a/source/includes/api/account.md.erb
+++ b/source/includes/api/account.md.erb
@@ -9,3 +9,4 @@
 
 <%= partial "includes/api/methods/postAccount.md" %>
 <%= partial "includes/api/methods/postAccountEventsSearch.md" %>
+<%= partial "includes/api/methods/postAccountEventsSeen.md" %>
