--- a/source/includes/api/stats.md.erb
+++ b/source/includes/api/stats.md.erb
@@ -1,5 +1,5 @@
 # Statistics API
 
-<%= partial "includes/api/methods/getStatsHttp.md" %>
-<%= partial "includes/api/methods/getStatsSpinsViews.md" %>
-<%= partial "includes/api/methods/getStatsStorage.md" %>
+<%= partial "includes/api/methods/getStatsHttp.md.erb" %>
+<%= partial "includes/api/methods/getStatsSpinsViews.md.erb" %>
+<%= partial "includes/api/methods/getStatsStorage.md.erb" %>
