--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -41,7 +41,7 @@ Each API call must be authenticated with a bearer token (JSON Web Token).
 You can get a token with a POST request. Use the token with the Sirv REST API methods listed below.
 When the token expires (see the expiresIn field, in seconds), you should request a new token.
 
-<%= partial "includes/api/methods/postToken.md.erb" %>
+<%= partial "includes/api/methods/postToken.md" %>
 
 <%= partial "includes/api/account.md.erb" %>
 <%= partial "includes/api/user.md.erb" %>
