--- a/source/includes/api/account.md.erb
+++ b/source/includes/api/account.md.erb
@@ -1,12 +1,12 @@
 # Account API
 
-<%= partial "includes/api/methods/getAccount.md.erb" %>
-<%= partial "includes/api/methods/getAccountLimits.md.erb" %>
-<%= partial "includes/api/methods/getAccountStorage.md.erb" %>
-<%= partial "includes/api/methods/getAccountUsers.md.erb" %>
+<%= partial "includes/api/methods/getAccount.md" %>
+<%= partial "includes/api/methods/getAccountLimits.md" %>
+<%= partial "includes/api/methods/getAccountStorage.md" %>
+<%= partial "includes/api/methods/getAccountUsers.md" %>
 
-<%= partial "includes/api/methods/getBillingPlan.md.erb" %>
+<%= partial "includes/api/methods/getBillingPlan.md" %>
 
-<%= partial "includes/api/methods/postAccount.md.erb" %>
-<%= partial "includes/api/methods/postAccountEventsSearch.md.erb" %>
-<%= partial "includes/api/methods/postAccountEventsSeen.md.erb" %>
+<%= partial "includes/api/methods/postAccount.md" %>
+<%= partial "includes/api/methods/postAccountEventsSearch.md" %>
+<%= partial "includes/api/methods/postAccountEventsSeen.md" %>
