--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -1,25 +1,25 @@
 # Files API
 
-<%= partial "includes/api/methods/getFilesMetaApproval.md.erb" %>
-<%= partial "includes/api/methods/getFilesMetaDescription.md.erb" %>
-<%= partial "includes/api/methods/getFilesMetaProduct.md.erb" %>
-<%= partial "includes/api/methods/getFilesMetaTags.md.erb" %>
-<%= partial "includes/api/methods/getFilesMetaTitle.md.erb" %>
-<%= partial "includes/api/methods/getFilesOptions.md.erb" %>
-<%= partial "includes/api/methods/getFilesReaddir.md.erb" %>
-<%= partial "includes/api/methods/getFilesStat.md.erb" %>
+<%= partial "includes/api/methods/getFilesMetaApproval.md" %>
+<%= partial "includes/api/methods/getFilesMetaDescription.md" %>
+<%= partial "includes/api/methods/getFilesMetaProduct.md" %>
+<%= partial "includes/api/methods/getFilesMetaTags.md" %>
+<%= partial "includes/api/methods/getFilesMetaTitle.md" %>
+<%= partial "includes/api/methods/getFilesOptions.md" %>
+<%= partial "includes/api/methods/getFilesReaddir.md" %>
+<%= partial "includes/api/methods/getFilesStat.md" %>
 
-<%= partial "includes/api/methods/postFilesCopy.md.erb" %>
-<%= partial "includes/api/methods/postFilesDelete.md.erb" %>
-<%= partial "includes/api/methods/postFilesFetch.md.erb" %>
-<%= partial "includes/api/methods/postFilesJwt.md.erb" %>
-<%= partial "includes/api/methods/postFilesMetaApproval.md.erb" %>
-<%= partial "includes/api/methods/postFilesMetaProduct.md.erb" %>
-<%= partial "includes/api/methods/postFilesMetaTags.md.erb" %>
-<%= partial "includes/api/methods/postFilesMetaTitle.md.erb" %>
-<%= partial "includes/api/methods/postFilesOptions.md.erb" %>
-<%= partial "includes/api/methods/postFilesSearch.md.erb" %>
-<%= partial "includes/api/methods/postFilesSearchScroll.md.erb" %>
-<%= partial "includes/api/methods/postFilesSpin2Video.md.erb" %>
-<%= partial "includes/api/methods/postFilesUpload.md.erb" %>
-<%= partial "includes/api/methods/postFilesVideo2Spin.md.erb" %>
+<%= partial "includes/api/methods/postFilesCopy.md" %>
+<%= partial "includes/api/methods/postFilesDelete.md" %>
+<%= partial "includes/api/methods/postFilesFetch.md" %>
+<%= partial "includes/api/methods/postFilesJwt.md" %>
+<%= partial "includes/api/methods/postFilesMetaApproval.md" %>
+<%= partial "includes/api/methods/postFilesMetaProduct.md" %>
+<%= partial "includes/api/methods/postFilesMetaTags.md" %>
+<%= partial "includes/api/methods/postFilesMetaTitle.md" %>
+<%= partial "includes/api/methods/postFilesOptions.md" %>
+<%= partial "includes/api/methods/postFilesSearch.md" %>
+<%= partial "includes/api/methods/postFilesSearchScroll.md" %>
+<%= partial "includes/api/methods/postFilesSpin2Video.md" %>
+<%= partial "includes/api/methods/postFilesUpload.md" %>
+<%= partial "includes/api/methods/postFilesVideo2Spin.md" %>
