Target blank link and a new TOC item

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -15,6 +15,7 @@ language_tabs: # must be one of https://git.io/vQNgJ
 
 toc_footers:
   - <a href='https://sirv.com/contact/'>Need Help?</a>
+  - <a href='https://sirv.com/help/articles/sirv-rest-api/'>More Sirv API examples</a>
 
 search: true
 
@@ -27,7 +28,7 @@ The first time you use the Sirv REST API, create an API client, then connect to 
 
 # API client
 
-To use the Sirv REST API, create an API client from the [Settings page of your Sirv account](https://my.sirv.com/#/account/settings):
+To use the Sirv REST API, create an API client from the <a href="https://my.sirv.com/#/account/settings" target="_blank" rel="noopener noreferrer">Settings page of your Sirv account</a>:
 
 ![Create API Client](https://sirv.sirv.com/website/screenshots/sirv-api-client-create.png?profile=screenshots-grey-border)
 
