https://3.basecamp.com/3562099/buckets/1582042/todos/2877627185#__recording_2922437815 and OG tags.

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -14,8 +14,10 @@ language_tabs: # must be one of https://git.io/vQNgJ
   - csharp: C#
 
 toc_footers:
-  - <a href='https://sirv.com/contact/'>Need Help?</a>
   - <a href='https://sirv.com/help/articles/sirv-rest-api/'>More Sirv API examples</a>
+  - <a href='https://sirv.com/help/'>Help Center</a>
+  - <a href='https://sirv.com/'>Sirv Homepage</a>
+  - <a href='https://sirv.com/contact/'>Contact us</a>
 
 search: true
 
