--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -30,7 +30,11 @@ under the License.
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title><%= current_page.data.title || "API Documentation" %></title>
-
+    <meta name="description" content="Use the Sirv REST API to automate your image, video and 360 spin processing and management. Create robust workflows with more than 50 API methods">
+    <link rel="icon" href="https://sirv.com/favicon.ico" type="image/x-icon">
+    <meta property="og:image" content="https://sirv.sirv.com/website/social-graph/OG-grid.png?text.0.text=<%= current_page.data.title || "API Documentation" %>&text.0.position.gravity=center&text.0.position.y=10%&text.0.color=424040&text.0.font.family=Source%20Sans%20Pro&text.0.size=50&watermark.0.image=%2Fwebsite%2Fsirv-logo-823.png&watermark.0.scale.width=300&watermark.0.position.gravity=north&watermark.0.position.y=10%" />
+    <meta property="og:title" content="<%= current_page.data.title || "API Documentation" %>" />
+    <meta property="og:description" content="Use the Sirv REST API to automate your image, video and 360 spin processing and management. Create robust workflows with more than 50 API methods" />
     <style media="screen">
       <%= Rouge::Themes::MonokaiSublimeSlate.render(:scope => '.highlight') %>
     </style>
