Added a margin-top class for paragraphs - .mt

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -517,7 +517,8 @@ html, body {
   &>div.highlight {
     clear:none;
   }
-
+  &>p.mt { margin-top: 1em; }
+  
   pre, blockquote {
     background-color: $code-bg;
     color: #fff;
