Add missing dlete files meta tags method

--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -23,3 +23,5 @@
 <%= partial "includes/api/methods/postFilesSpin2Video.md" %>
 <%= partial "includes/api/methods/postFilesUpload.md" %>
 <%= partial "includes/api/methods/postFilesVideo2Spin.md" %>
+
+<%= partial "includes/api/methods/deleteFilesMetaTags.md" %>
