Add two nee API methods

--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -22,6 +22,8 @@
 <%= partial "includes/api/methods/postFilesSearchScroll.md" %>
 <%= partial "includes/api/methods/postFilesSpin2Video.md" %>
 <%= partial "includes/api/methods/postFilesUpload.md" %>
+<%= partial "includes/api/methods/postFilesMkdir.md" %>
+<%= partial "includes/api/methods/postFilesRename.md" %>
 <%= partial "includes/api/methods/postFilesVideo2Spin.md" %>
 
 <%= partial "includes/api/methods/deleteFilesMetaTags.md" %>
