--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -15,6 +15,7 @@
 <%= partial "includes/api/methods/postFilesJwt.md" %>
 <%= partial "includes/api/methods/postFilesMetaApproval.md" %>
 <%= partial "includes/api/methods/postFilesMetaProduct.md" %>
+<%= partial "includes/api/methods/postFilesMetaDescription.md" %>
 <%= partial "includes/api/methods/postFilesMetaTags.md" %>
 <%= partial "includes/api/methods/postFilesMetaTitle.md" %>
 <%= partial "includes/api/methods/postFilesOptions.md" %>
