Update title and description

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Sirv API Reference
+title: Sirv REST API Documentation - Reference Guide
 
 language_tabs: # must be one of https://git.io/vQNgJ
   - shell: cURL
