Export spin to Amazon

--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -22,6 +22,7 @@
 <%= partial "includes/api/methods/postFilesSearch.md" %>
 <%= partial "includes/api/methods/postFilesSearchScroll.md" %>
 <%= partial "includes/api/methods/postFilesSpin2Video.md" %>
+<%= partial "includes/api/methods/postFilesSpin2Amazon360.md" %>
 <%= partial "includes/api/methods/postFilesUpload.md" %>
 <%= partial "includes/api/methods/postFilesMkdir.md" %>
 <%= partial "includes/api/methods/postFilesRename.md" %>
