--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -8,6 +8,7 @@
 <%= partial "includes/api/methods/getFilesOptions.md" %>
 <%= partial "includes/api/methods/getFilesReaddir.md" %>
 <%= partial "includes/api/methods/getFilesStat.md" %>
+<%= partial "includes/api/methods/getFilesDownload.md" %>
 
 <%= partial "includes/api/methods/postFilesCopy.md" %>
 <%= partial "includes/api/methods/postFilesDelete.md" %>
