--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -26,6 +26,8 @@
 <%= partial "includes/api/methods/postFilesSpin2Amazon360.md" %>
 <%= partial "includes/api/methods/postFilesSpin2Grainger360.md" %>
 <%= partial "includes/api/methods/postFilesSpin2Walmart360.md" %>
+<%= partial "includes/api/methods/postFilesSpin2Homedepot360.md" %>
+<%= partial "includes/api/methods/postFilesSpin2Lowes360.md" %>
 <%= partial "includes/api/methods/postFilesUpload.md" %>
 <%= partial "includes/api/methods/postFilesMkdir.md" %>
 <%= partial "includes/api/methods/postFilesRename.md" %>
