Add files/poi methods

--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -9,6 +9,7 @@
 <%= partial "includes/api/methods/getFilesReaddir.md" %>
 <%= partial "includes/api/methods/getFilesStat.md" %>
 <%= partial "includes/api/methods/getFilesDownload.md" %>
+<%= partial "includes/api/methods/getFilesPoi.md" %>
 
 <%= partial "includes/api/methods/postFilesCopy.md" %>
 <%= partial "includes/api/methods/postFilesDelete.md" %>
@@ -32,5 +33,7 @@
 <%= partial "includes/api/methods/postFilesMkdir.md" %>
 <%= partial "includes/api/methods/postFilesRename.md" %>
 <%= partial "includes/api/methods/postFilesVideo2Spin.md" %>
+<%= partial "includes/api/methods/postFilesPoi.md" %>
 
 <%= partial "includes/api/methods/deleteFilesMetaTags.md" %>
+<%= partial "includes/api/methods/deleteFilesPoi.md" %>
