--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -26,11 +26,13 @@ code_clipboard: true
 
 # Getting started
 
-The first time you use the Sirv REST API, create an API client, then connect to Sirv. Once connected, you can use over 30 API methods.
+The Sirv API gives you 40+ popular commands for your Sirv account. Upload files, search files, rename files, add meta, get folder contents and more.
+
+First, please create an API client...
 
 # API client
 
-To use the Sirv REST API, create an API client from the <a href="https://my.sirv.com/#/account/settings" target="_blank" rel="noopener noreferrer">Settings page of your Sirv account</a>:
+To use the Sirv REST API, start by creating an API client from the <a href="https://my.sirv.com/#/account/settings/api" target="_blank" rel="noopener noreferrer">API settings page</a> of your Sirv account:
 
 ![Create API Client](https://sirv.sirv.com/website/screenshots/sirv-api-client-create.png?profile=screenshots-grey-border)
 
@@ -40,9 +42,7 @@ Once created, you'll see your Client ID and Client Secret:
 
 # Connect to Sirv API
 
-Each API call must be authenticated with a bearer token (JSON Web Token).
-You can get a token with a POST request. Use the token with the Sirv REST API methods listed below.
-When the token expires (see the expiresIn field, in seconds), you should request a new token.
+The first step in using the API is to obtain a bearer token. Once you have that token, you'll be able to use any of the 40+ API methods listed further down this page.
 
 <%= partial "includes/api/methods/postToken.md" %>
 
