--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -5,6 +5,7 @@
 <%= partial "includes/api/methods/getFilesMetaProduct.md" %>
 <%= partial "includes/api/methods/getFilesMetaTags.md" %>
 <%= partial "includes/api/methods/getFilesMetaTitle.md" %>
+<%= partial "includes/api/methods/getFilesMeta.md" %>
 <%= partial "includes/api/methods/getFilesOptions.md" %>
 <%= partial "includes/api/methods/getFilesReaddir.md" %>
 <%= partial "includes/api/methods/getFilesStat.md" %>
@@ -20,6 +21,7 @@
 <%= partial "includes/api/methods/postFilesMetaDescription.md" %>
 <%= partial "includes/api/methods/postFilesMetaTags.md" %>
 <%= partial "includes/api/methods/postFilesMetaTitle.md" %>
+<%= partial "includes/api/methods/postFilesMeta.md" %>
 <%= partial "includes/api/methods/postFilesOptions.md" %>
 <%= partial "includes/api/methods/postFilesSearch.md" %>
 <%= partial "includes/api/methods/postFilesSearchScroll.md" %>
