Docs for ZIP methods

--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -11,6 +11,7 @@
 <%= partial "includes/api/methods/getFilesStat.md" %>
 <%= partial "includes/api/methods/getFilesDownload.md" %>
 <%= partial "includes/api/methods/getFilesPoi.md" %>
+<%= partial "includes/api/methods/getFilesZip.md" %>
 
 <%= partial "includes/api/methods/postFilesCopy.md" %>
 <%= partial "includes/api/methods/postFilesDelete.md" %>
@@ -36,6 +37,7 @@
 <%= partial "includes/api/methods/postFilesRename.md" %>
 <%= partial "includes/api/methods/postFilesVideo2Spin.md" %>
 <%= partial "includes/api/methods/postFilesPoi.md" %>
+<%= partial "includes/api/methods/postFilesZip.md" %>
 
 <%= partial "includes/api/methods/deleteFilesMetaTags.md" %>
 <%= partial "includes/api/methods/deleteFilesPoi.md" %>
