--- a/source/includes/api/files.md.erb
+++ b/source/includes/api/files.md.erb
@@ -12,7 +12,9 @@
 <%= partial "includes/api/methods/getFilesDownload.md" %>
 <%= partial "includes/api/methods/getFilesPoi.md" %>
 <%= partial "includes/api/methods/getFilesZip.md" %>
+<%= partial "includes/api/methods/getFilesBatchDelete.md" %>
 
+<%= partial "includes/api/methods/postFilesBatchDelete.md" %>
 <%= partial "includes/api/methods/postFilesCopy.md" %>
 <%= partial "includes/api/methods/postFilesDelete.md" %>
 <%= partial "includes/api/methods/postFilesFetch.md" %>
